created initial code firtst models for api

--- a/PalladiumDwh.Uploader/App.config
+++ b/PalladiumDwh.Uploader/App.config
@@ -57,4 +57,4 @@
   </runtime>
 
 
-<connectionStrings><add name="DwhClientEntities" connectionString="metadata=res://*/Model.DwhClientModel.csdl|res://*/Model.DwhClientModel.ssdl|res://*/Model.DwhClientModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WAKHUTU-PC;initial catalog=DwhClient;user id=sa;password=c0nste11a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="DwhClientEntities" connectionString="metadata=res://*/Model.DwhClientModel.csdl|res://*/Model.DwhClientModel.ssdl|res://*/Model.DwhClientModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\koske14;initial catalog=DwhClient;user id=sa;password=maun;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
