--- a/PalladiumDwh.Wapi/Web.config
+++ b/PalladiumDwh.Wapi/Web.config
@@ -56,7 +56,7 @@
   </runtime>
   <connectionStrings>
     <add name="Dw_PStagingEntities" connectionString="metadata=res://*/Models.DwhModel.csdl|res://*/Models.DwhModel.ssdl|res://*/Models.DwhModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WAKHUTU-PC;initial catalog=Dw_PStaging;user id=sa;password=c0nste11a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DwhServerEntities" connectionString="metadata=res://*/Models.DwhServerModel.csdl|res://*/Models.DwhServerModel.ssdl|res://*/Models.DwhServerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WAKHUTU-PC;initial catalog=DwhServer;persist security info=True;user id=sa;password=c0nste11a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DwhServerEntities" connectionString="metadata=res://*/Models.DwhServerModel.csdl|res://*/Models.DwhServerModel.ssdl|res://*/Models.DwhServerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\koske14;initial catalog=DwhServer;persist security info=True;user id=sa;password=maun;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
