--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201701160913554_initial.Designer.cs">
       <DependentUpon>201701160913554_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701161200456_PatientPharmacy.cs" />
+    <Compile Include="Migrations\201701161200456_PatientPharmacy.Designer.cs">
+      <DependentUpon>201701161200456_PatientPharmacy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -84,6 +88,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201701160913554_initial.resx">
       <DependentUpon>201701160913554_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701161200456_PatientPharmacy.resx">
+      <DependentUpon>201701161200456_PatientPharmacy.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
