--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -58,13 +62,13 @@
     <Compile Include="Model\DTO\PatientExtractDTO.cs" />
     <Compile Include="Model\DTO\PatientLaboratoryExtractDTO.cs" />
     <Compile Include="Model\DTO\PatientPharmacyExtractDTO.cs" />
-    <Compile Include="Model\DTO\PatientLabProfile.cs" />
-    <Compile Include="Model\DTO\PatientBaselineProfile.cs" />
-    <Compile Include="Model\DTO\PatientPharmacyProfile.cs" />
-    <Compile Include="Model\DTO\PatientStatusProfile.cs" />
-    <Compile Include="Model\DTO\PatientARTProfile.cs" />
-    <Compile Include="Model\DTO\PatientVisitProfile.cs" />
-    <Compile Include="Model\DTO\PatientProfile.cs" />
+    <Compile Include="Model\Profiles\PatientLabProfile.cs" />
+    <Compile Include="Model\Profiles\PatientBaselineProfile.cs" />
+    <Compile Include="Model\Profiles\PatientPharmacyProfile.cs" />
+    <Compile Include="Model\Profiles\PatientStatusProfile.cs" />
+    <Compile Include="Model\Profiles\PatientARTProfile.cs" />
+    <Compile Include="Model\Profiles\PatientVisitProfile.cs" />
+    <Compile Include="Model\Profiles\PatientProfile.cs" />
     <Compile Include="Model\DTO\PatientStatusExtractDTO.cs" />
     <Compile Include="Model\DTO\PatientVisitExtractDTO.cs" />
     <Compile Include="Model\Facility.cs" />
@@ -76,6 +80,7 @@
     <Compile Include="Model\PatientStatusExtract.cs" />
     <Compile Include="Model\PatientVisitExtract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SyncService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PalladiumDwh.Shared\PalladiumDwh.Shared.csproj">
@@ -83,7 +88,9 @@
       <Name>PalladiumDwh.Shared</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
