--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=2.0.7.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -68,6 +72,10 @@
     <Compile Include="Migrations\201701161200456_PatientPharmacy.Designer.cs">
       <DependentUpon>201701161200456_PatientPharmacy.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701170619143_AddedVoided.cs" />
+    <Compile Include="Migrations\201701170619143_AddedVoided.Designer.cs">
+      <DependentUpon>201701170619143_AddedVoided.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -91,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701161200456_PatientPharmacy.resx">
       <DependentUpon>201701161200456_PatientPharmacy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701170619143_AddedVoided.resx">
+      <DependentUpon>201701170619143_AddedVoided.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
