--- a/PalladiumDwh.DWapi.Tests/packages.config
+++ b/PalladiumDwh.DWapi.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Effort.EF6" version="1.3.0" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
@@ -9,4 +11,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="NMemory" version="1.1.2" targetFramework="net46" />
+  <package id="NUnit" version="3.6.0" targetFramework="net46" />
+  <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net46" />
 </packages>
