--- a/PalladiumDwh.Infrastructure.Tests/PalladiumDwh.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.Infrastructure.Tests/PalladiumDwh.Infrastructure.Tests.csproj
@@ -73,6 +73,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="FacilityRepositoryTests.cs" />
+    <Compile Include="PatientExtractRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GenericRepositoryTests.cs" />
     <Compile Include="TestHelpers.cs" />
