--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Interfaces\IClearPatientRecords.cs" />
     <Compile Include="Interfaces\IMessagingReaderService.cs" />
+    <Compile Include="Interfaces\IMessagingSenderService.cs" />
     <Compile Include="Interfaces\IMessagingService.cs" />
     <Compile Include="Interfaces\IPatientArtExtractRepository.cs" />
     <Compile Include="Interfaces\IPatientBaseLinesRepository.cs" />
@@ -87,6 +88,7 @@
     <Compile Include="Model\PatientVisitExtract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MessagingReaderService.cs" />
+    <Compile Include="Services\MessagingSenderService.cs" />
     <Compile Include="Services\MessagingService.cs" />
     <Compile Include="Services\SyncService.cs" />
   </ItemGroup>
