--- a/PalladiumDwh.Shared.Tests/PalladiumDwh.Shared.Tests.csproj
+++ b/PalladiumDwh.Shared.Tests/PalladiumDwh.Shared.Tests.csproj
@@ -59,6 +59,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreamExtensionsTests.cs" />
     <Compile Include="UtilityTests.cs" />
   </ItemGroup>
   <ItemGroup>
