added simple test job

--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -29,6 +29,9 @@
       <setting name="QueueBatch" serializeAs="String">
         <value>100</value>
       </setting>
+      <setting name="QueuePoll" serializeAs="String">
+        <value>5</value>
+      </setting>
     </PalladiumDWh.DwapiService.Properties.Settings>
   </applicationSettings>
 </configuration>
