--- a/PalladiumDwh.DwapiService/Properties/Settings.settings
+++ b/PalladiumDwh.DwapiService/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="QueueBatch" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="QueuePoll" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
