--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -81,7 +81,7 @@
   <applicationSettings>
     <PalladiumDwh.DWapi.Properties.Settings>
       <setting name="QueueName" serializeAs="String">
-        <value>.\private$\dwapi.emr.concept</value>
+        <value>.\private$\dwapi.emr</value>
       </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
