--- a/PalladiumDwh.DWapi.Client.Tests/PalladiumDwh.DWapi.Client.Tests.csproj
+++ b/PalladiumDwh.DWapi.Client.Tests/PalladiumDwh.DWapi.Client.Tests.csproj
@@ -65,6 +65,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Messaging" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
