--- a/PalladiumDwh.DWapi/Properties/Settings.settings
+++ b/PalladiumDwh.DWapi/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="QueueName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">.\private$\dwapi.emr.concept</Value>
+      <Value Profile="(Default)">.\private$\dwapi.emr</Value>
     </Setting>
   </Settings>
 </SettingsFile>
